Add html structure for heading, questions and score area

--- a/index.html
+++ b/index.html
@@ -4,10 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- font awesome and google fonts-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css"
     <title>Document</title>
 </head>
 <body>
+    <h2 class="quiz-name">
+        <img class="logo" src="assets/images/logo.png" alt="logo">
+    </h2>
+    
+    <div class="home-page-box">
+        <form>
+            <div class="input-field">
+
+            </div>
+            <div class="instructions">
+                <div>
+
+                </div>
+            </div>
+        </form>
+    </div>
+
+    <div class="question-box">
+        <div class="question-box-header">
+            <div class="question-number"></div>
+            <div class="user"></div>
+        </div>
+    </div>
+
+    <div class="question-text"></div>
+
+    <div class="option-wrapper"></div>
+
+    <div class="next-question-btn"></div>
+
+    <div class="answers-area"></div>
+
+    <div class="score-box">
+        <table>
+
+        </table>
+    </div>
+    <footer>
+
+    </footer>
+
     <script src="assets/js/script.js"></script>
 </body>
 </html>
