--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- font awesome and google fonts-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css"
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -17,9 +17,12 @@
     </h2>
     
     <div class="home-page-box">
-        <form>
+        <form action="" class="form" name="id" onsubmit="Submitted(event)">
             <div class="input-field">
-
+                <input type="text" id="name" required>
+                <label for="name"> Enter name:</label>
+                <button type="submit" class="btn" onclick="this.style.display='none'">Submit</button>
+                <h6>How to play: </h6>
             </div>
             <div class="instructions">
                 <div>
