add game instructions within form area

--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
                 <button type="submit" class="btn" onclick="this.style.display='none'">Submit</button>
                 <h6>How to play: </h6>
             </div>
-            <div class="instructions">
-                <div>
 
-                </div>
+            <!-- game instructions-->
+            <div class="instructions">
+                <ol>
+                   <li>Select the start button below to begin playing</li>
+                   <li>Answers cannot be changed once an option is selected.</li>
+                   <li>Press the next button at the buttom of the modal to move on to the next question.</li>
+                   <li>Your score and total questions attempted will be displayed at the end of the quiz.</li>
+                   <li>At the end of the quiz opions are given to try again or return to the home screen.</li>
+                </ol>
             </div>
         </form>
     </div>
