create table for score-box and functions to call home page and reset game

--- a/index.html
+++ b/index.html
@@ -69,8 +69,34 @@
     <!-- answers indicators area -->
     <div class="answers-area"></div>
     <div class="score-box">
-        <table>
+        <h2>Your results</h2>
 
+        <!-- table for score box -->
+        <table>
+            <tr>
+                <td>Total questions</td>
+                <td><span class="number-of-questions"></span></td>
+            </tr>
+            <tr>
+                <td>Answered</td>
+                <td><span class="questions-tried"></span></td>
+            </tr>
+            <tr>
+                <td>Answers correct</td>
+                <td><span class="number-of-questions"></span></td>
+            </tr>
+            <tr>
+                <td>Incorrect answers</td>
+                <td><span class="total-incorrect"></span></td>
+            </tr>
+            <tr>
+                <td>Percentage</td>
+                <td><span class="percentage"></span></td>
+            </tr>
+            <tr>
+                <td>Your score</td>
+                <td><span class="total-score"></span></td>
+            </tr>
         </table>
     </div>
     <footer>
