create table for score-box and functions to call home page and reset game

--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
                 <td><span class="total-score"></span></td>
             </tr>
         </table>
+        <button type="button" class="btn" onclick="restartQuiz()">Restart Quiz</button>
+        <button type="button" class="btn" onclick="loadHomePage()">Home Page</button>
     </div>
     <footer>
 
