add footer and social media elements

--- a/index.html
+++ b/index.html
@@ -101,8 +101,28 @@
         <button type="button" class="btn" onclick="restartQuiz()">Restart Quiz</button>
         <button type="button" class="btn" onclick="loadHomePage()">Home Page</button>
     </div>
-    <footer>
 
+    <!-- footer -->
+    <div class="footer">
+        <p>Copyright &copy; 2021 Lavin Lennon</p>
+        <ul class="socialmedia">
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+            </li>
+        </ul>
     </footer>
 
     <script src="assets/js/script.js"></script>
