style instructions list items, add hidden box containert  index page  for next question button add styling and animation to box, style fa-user class

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     
     <!-- create question-box, and question box header for question number and username -->
-    <div class="question-box">
+    <div class="question-box hidden-box hide">
         <div class="question-box-header">
             <div class="question-number"></div>
             <div class="user">
@@ -68,7 +68,7 @@
     
     <!-- answers indicators area -->
     <div class="answers-area"></div>
-    <div class="score-box">
+    <div class="score-box hidden-box hide">
         <h2>Your results</h2>
 
         <!-- table for score box -->
