--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <form action="" class="form" name="id" onsubmit="Submitted(event)">
             <div class="input-field">
                 <input type="text" id="name" required>
-                <label for="name"> Enter name:</label>
+                <label for="name"><i class="fas fa-user"></i> Enter name:</label>
                 <button type="submit" class="btn" onclick="this.style.display='none'">Submit</button>
                 <h6>How to play: </h6>
             </div>
