--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 </head>
 <body>
     <h2 class="quiz-name">
-        <img class="logo" src="assets/images/logo.png" alt="logo">
+        <a href="index.html">
+            <img class="logo" src="assets/images/logo.png" alt="logo">
+        </a>
     </h2>
     
     <!-- create home page container-->
