--- a/index.html
+++ b/index.html
@@ -134,5 +134,6 @@
 
     <script src="assets/js/script.js"></script>
     <script src="assets/js/question.js"></script>
+    <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
 </body>
 </html>
