amend display button fucnction to keep button visisible

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <!-- <i class="material-icons prefix">account_box</i> -->
                 <input type="text" id="name" required onblur="this.value=removeSpaces(this.value);">
                 <label for="name"> Enter name:</label>
-                <button type="submit" class="btn" onclick="this.style.display='none'">Submit</button>
+                <button type="submit" class="btn" onclick="this.style.display">Submit</button>
                 <h5>How to play: </h5>
             </div>
 
