decrease logo size, remove username field and associated code from all files, adjust media query for smart phones

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <div class="home-page-box">
 
         <!-- form elements and submit buttons-->
-        <form class="myform" name="id" onsubmit="submitted(event)">
+        <form class="myform" name="id">
             <div class="input-field">
-                <!-- <i class="material-icons prefix">account_box</i> -->
+                <!-- <i class="material-icons prefix">account_box</i>
                 <input type="text" id="name" required onblur="this.value=removeSpaces(this.value);">
                 <label for="name"> Enter name:</label>
-                <button type="submit" class="btn" onclick="this.style.display">Submit</button>
+                <button type="submit" class="btn" onclick="this.style.display">Submit</button> -->
                 <h5>How to play: </h5>
             </div>
 
@@ -57,9 +57,6 @@
     <div class="questions-box hidden-box hide">
         <div class="question-box-header">
             <div class="question-number"></div>
-            <div class="user">
-                <h6>Welcome! <span class="name"><h6></span>
-            </div>
         </div>
        
         <!-- question-box body and answers section-->
