remove greyed out code, adjust media query, add credits to code

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Sneakers Quiz">
+    <meta name="keywords" content="sneakers, quiz, trainers, shoes game">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -11,7 +13,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <title>Document</title>
+    <title>Sneakers-Quiz</title>
 </head>
 <body>
     <h2 class="quiz-name">
@@ -26,10 +28,6 @@
         <!-- form elements and submit buttons-->
         <form class="myform" name="id">
             <div class="input-field">
-                <!-- <i class="material-icons prefix">account_box</i>
-                <input type="text" id="name" required onblur="this.value=removeSpaces(this.value);">
-                <label for="name"> Enter name:</label>
-                <button type="submit" class="btn" onclick="this.style.display">Submit</button> -->
                 <h5>How to play: </h5>
             </div>
 
@@ -113,19 +111,19 @@
         <ul class="socialmedia">
             <li>
                 <a href="https://facebook.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+                    aria-label="Go to our Facebook page (opens in new tab)"><i class="fab fa-facebook"></i></a>
             </li>
             <li>
                 <a href="https://twitter.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
+                    aria-label="Go to our Twitter page (opens in new tab)"><i class="fab fa-twitter-square"></i></a>
             </li>
             <li>
                 <a href="https://youtube.com" target="_blank" rel="noopener"
-                    aria-label="Visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
+                    aria-label="Go to our YouTube page (opens in new tab)"><i class="fab fa-youtube-square"></i></a>
             </li>
             <li>
                 <a href="https://instagram.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+                    aria-label="Go to our Instagram page (opens in new tab)"><i class="fab fa-instagram"></i></a>
             </li>
         </ul>
     </footer>
