remove P tag from index.html line 48

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <!--create class to display total questions in quiz and function to start quiz game-->
             <div>
                 <hr>
-                <p><h5>Total number of questions: </h5><span class="number-of-questions"></span></p>
+                <h5>Total number of questions: </h5><span class="number-of-questions"></span></p>
                 <button type="button" class="btn" onclick="startQuiz()">Start quiz</button>
             </div>
         </form>
