remove p tag to address w3c validation error

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             <!--create class to display total questions in quiz and function to start quiz game-->
             <div>
                 <hr>
-                <h5>Total number of questions: </h5><span class="number-of-questions"></span></p>
+                <p>Total number of questions: </p>
+                <span class="number-of-questions"></span><br>
                 <button type="button" class="btn" onclick="startQuiz()">Start quiz</button>
             </div>
         </form>
@@ -126,7 +127,7 @@
                     aria-label="Go to our Instagram page (opens in new tab)"><i class="fab fa-instagram"></i></a>
             </li>
         </ul>
-    </footer>
+    </div>
 
     <script src="assets/js/script.js"></script>
     <script src="assets/js/question.js"></script>
