--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                    <li>Answers cannot be changed once an option is selected.</li>
                    <li>Press the next button at the buttom of the modal to move on to the next question.</li>
                    <li>Your score and total questions attempted will be displayed at the end of the quiz.</li>
-                   <li>At the end of the quiz opions are given to try again or return to the home screen.</li>
+                   <li>At the end of the quiz options are given to try again or return to the home screen.</li>
                 </ol>
             </div>
 
